--- a/_includes/files.mustache
+++ b/_includes/files.mustache
@@ -202,6 +202,7 @@
 "/images/ocean.svg",
 "/images/plants.svg",
 "/images/search.svg",
+"/images/share.png",
 "/images/title.svg",
 "/images/trees.svg",
 "/images/urban.svg",
