--- a/_includes/help.html
+++ b/_includes/help.html
@@ -29,7 +29,7 @@ built: function () {
     </div>
 
     <div class="single">
-        <div>
+        <div style="margin: 0 auto;">
             {{{ content }}}
             <hr style="margin-top: 1em; margin-bottom: 1em;" />
             <p>Copyright &copy; 2016-{{year}} Andrew &amp; Penny McKinlay</p>
