--- a/_includes/files.mustache
+++ b/_includes/files.mustache
@@ -201,6 +201,7 @@
 "/images/naturecompanion.svg",
 "/images/ocean.svg",
 "/images/plants.svg",
+"/images/safari.png",
 "/images/search.svg",
 "/images/share.png",
 "/images/title.svg",
