renames, links, photos

--- a/_includes/files.mustache
+++ b/_includes/files.mustache
@@ -75,6 +75,7 @@
 "/birds/burrowl/",
 "/birds/calgull/",
 "/birds/cangoose/",
+"/birds/canjay/",
 "/birds/capewarb/",
 "/birds/cedarwax/",
 "/birds/chipspar/",
@@ -89,7 +90,6 @@
 "/birds/glaugull/",
 "/birds/goldeagl/",
 "/birds/goldeye/",
-"/birds/grayjay/",
 "/birds/grebluher/",
 "/birds/gregrowl/",
 "/birds/grehowl/",
@@ -102,6 +102,7 @@
 "/birds/loon/",
 "/birds/magpie/",
 "/birds/mallard/",
+"/birds/merlin/",
 "/birds/mewgull/",
 "/birds/norflick/",
 "/birds/norhowl/",
@@ -387,6 +388,7 @@
 "/photos/birds/large/burrowl.jpg",
 "/photos/birds/large/calgull.jpg",
 "/photos/birds/large/cangoose.jpg",
+"/photos/birds/large/canjay.jpg",
 "/photos/birds/large/capewarb.jpg",
 "/photos/birds/large/cedarwax.jpg",
 "/photos/birds/large/chipspar.jpg",
@@ -401,7 +403,6 @@
 "/photos/birds/large/glaugull.jpg",
 "/photos/birds/large/goldeagl.jpg",
 "/photos/birds/large/goldeye.jpg",
-"/photos/birds/large/grayjay.jpg",
 "/photos/birds/large/grebluher.jpg",
 "/photos/birds/large/gregrowl.jpg",
 "/photos/birds/large/grehowl.jpg",
@@ -414,6 +415,7 @@
 "/photos/birds/large/loon.jpg",
 "/photos/birds/large/magpie.jpg",
 "/photos/birds/large/mallard.jpg",
+"/photos/birds/large/merlin.jpg",
 "/photos/birds/large/mewgull.jpg",
 "/photos/birds/large/norflick.jpg",
 "/photos/birds/large/norhowl.jpg",
@@ -470,6 +472,7 @@
 "/photos/birds/small/burrowl.jpg",
 "/photos/birds/small/calgull.jpg",
 "/photos/birds/small/cangoose.jpg",
+"/photos/birds/small/canjay.jpg",
 "/photos/birds/small/capewarb.jpg",
 "/photos/birds/small/cedarwax.jpg",
 "/photos/birds/small/chipspar.jpg",
@@ -484,7 +487,6 @@
 "/photos/birds/small/glaugull.jpg",
 "/photos/birds/small/goldeagl.jpg",
 "/photos/birds/small/goldeye.jpg",
-"/photos/birds/small/grayjay.jpg",
 "/photos/birds/small/grebluher.jpg",
 "/photos/birds/small/gregrowl.jpg",
 "/photos/birds/small/grehowl.jpg",
@@ -497,6 +499,7 @@
 "/photos/birds/small/loon.jpg",
 "/photos/birds/small/magpie.jpg",
 "/photos/birds/small/mallard.jpg",
+"/photos/birds/small/merlin.jpg",
 "/photos/birds/small/mewgull.jpg",
 "/photos/birds/small/norflick.jpg",
 "/photos/birds/small/norhowl.jpg",
@@ -694,7 +697,6 @@
 "/photos/plants/large/goldbean.jpg",
 "/photos/plants/large/goldrod.jpg",
 "/photos/plants/large/horse.jpg",
-"/photos/plants/large/indian.jpg",
 "/photos/plants/large/kelp.jpg",
 "/photos/plants/large/lupin.jpg",
 "/photos/plants/large/marshmar.jpg",
@@ -706,9 +708,10 @@
 "/photos/plants/large/pracrocus.jpg",
 "/photos/plants/large/praonion.jpg",
 "/photos/plants/large/prasun.jpg",
-"/photos/plants/large/pricrose.jpg",
 "/photos/plants/large/prpcac.jpg",
+"/photos/plants/large/prwrose.jpg",
 "/photos/plants/large/pupclover.jpg",
+"/photos/plants/large/redpaint.jpg",
 "/photos/plants/large/solomon.jpg",
 "/photos/plants/large/threeavens.jpg",
 "/photos/plants/large/tuftflea.jpg",
@@ -745,7 +748,6 @@
 "/photos/plants/small/goldbean.jpg",
 "/photos/plants/small/goldrod.jpg",
 "/photos/plants/small/horse.jpg",
-"/photos/plants/small/indian.jpg",
 "/photos/plants/small/kelp.jpg",
 "/photos/plants/small/lupin.jpg",
 "/photos/plants/small/marshmar.jpg",
@@ -757,9 +759,10 @@
 "/photos/plants/small/pracrocus.jpg",
 "/photos/plants/small/praonion.jpg",
 "/photos/plants/small/prasun.jpg",
-"/photos/plants/small/pricrose.jpg",
 "/photos/plants/small/prpcac.jpg",
+"/photos/plants/small/prwrose.jpg",
 "/photos/plants/small/pupclover.jpg",
+"/photos/plants/small/redpaint.jpg",
 "/photos/plants/small/solomon.jpg",
 "/photos/plants/small/threeavens.jpg",
 "/photos/plants/small/tuftflea.jpg",
@@ -889,7 +892,6 @@
 "/plants/goldbean/",
 "/plants/goldrod/",
 "/plants/horse/",
-"/plants/indian/",
 "/plants/kelp/",
 "/plants/lupin/",
 "/plants/marshmar/",
@@ -902,9 +904,10 @@
 "/plants/pracrocus/",
 "/plants/praonion/",
 "/plants/prasun/",
-"/plants/pricrose/",
 "/plants/prpcac/",
+"/plants/prwrose/",
 "/plants/pupclover/",
+"/plants/redpaint/",
 "/plants/solomon/",
 "/plants/threeavens/",
 "/plants/tuftflea/",
