add link to EcoFriendly from help

--- a/_includes/help.html
+++ b/_includes/help.html
@@ -32,7 +32,9 @@ built: function () {
         <div style="margin: 0 auto;">
             {{{ content }}}
             <hr style="margin-top: 1em; margin-bottom: 1em;" />
-            <p>Copyright &copy; 2016-{{year}} Andrew &amp; Penny McKinlay</p>
+            <p>Copyright &copy; 2016-{{year}} Andrew &amp; Penny McKinlay - 
+                <a href="https://www.ecofriendlysask.ca/">EcoFriendly Sask</a>
+            </p>
 
             <p>Contact <a href="mailto:naturecompanion@mail.com?Subject=NatureCompanion">naturecompanion@mail.com</a></p>
 
