add social media og:image screenshot

--- a/_includes/head.html.mustache
+++ b/_includes/head.html.mustache
@@ -1,5 +1,5 @@
 <meta name="description"
-    content="Find out more about the plants and animals around you">
+    content="An introductory nature guide to the plants and animals of Western Canada">
 <meta charset="utf-8">
 <meta http-equiv="x-ua-compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
