add title/tooltip to single top left icon

--- a/_includes/single.html
+++ b/_includes/single.html
@@ -45,7 +45,8 @@ prev: function() {
         <h1>
             <div class="header-left">
                 <a href="/{{ section }}/">
-                    <img id="small-logo" src="/images/{{ section }}.svg" />
+                    <img id="small-logo" src="/images/{{ section }}.svg" 
+                        title="{{ section-title }}" />
                 </a>
                 <span>{{ name }}</span>
             </div>
