finish adding yellow headed blackbird

--- a/_includes/files.mustache
+++ b/_includes/files.mustache
@@ -147,6 +147,7 @@
 "/birds/whoopcrane/",
 "/birds/wilswarb/",
 "/birds/woodduck/",
+"/birds/yellhead/",
 "/birds/yellrump/",
 "/birds/yellwarb/",
 "/browserconfig.xml",
