--- a/_includes/files.mustache
+++ b/_includes/files.mustache
@@ -461,6 +461,7 @@
 "/photos/birds/large/whoopcrane.jpg",
 "/photos/birds/large/wilswarb.jpg",
 "/photos/birds/large/woodduck.jpg",
+"/photos/birds/large/yellhead.jpg",
 "/photos/birds/large/yellrump.jpg",
 "/photos/birds/large/yellwarb.jpg",
 "/photos/birds/small/annas.jpg",
@@ -545,6 +546,7 @@
 "/photos/birds/small/whoopcrane.jpg",
 "/photos/birds/small/wilswarb.jpg",
 "/photos/birds/small/woodduck.jpg",
+"/photos/birds/small/yellhead.jpg",
 "/photos/birds/small/yellrump.jpg",
 "/photos/birds/small/yellwarb.jpg",
 "/photos/herps/large/borchor.jpg",
