--- a/_includes/files.mustache
+++ b/_includes/files.mustache
@@ -707,6 +707,7 @@
 "/photos/plants/large/norbvio.jpg",
 "/photos/plants/large/philflea.jpg",
 "/photos/plants/large/pincac.jpg",
+"/photos/plants/large/poisivy.jpg",
 "/photos/plants/large/pracone.jpg",
 "/photos/plants/large/pracrocus.jpg",
 "/photos/plants/large/praonion.jpg",
@@ -758,6 +759,7 @@
 "/photos/plants/small/norbvio.jpg",
 "/photos/plants/small/philflea.jpg",
 "/photos/plants/small/pincac.jpg",
+"/photos/plants/small/poisivy.jpg",
 "/photos/plants/small/pracone.jpg",
 "/photos/plants/small/pracrocus.jpg",
 "/photos/plants/small/praonion.jpg",
@@ -782,6 +784,7 @@
 "/photos/plants/small/yelaval.jpg",
 "/photos/plants/small/yellslip.jpg",
 "/photos/trees/large/arbutus.jpg",
+"/photos/trees/large/aspen.jpg",
 "/photos/trees/large/balfir.jpg",
 "/photos/trees/large/balpop.jpg",
 "/photos/trees/large/bear.jpg",
@@ -818,7 +821,6 @@
 "/photos/trees/large/spruce.jpg",
 "/photos/trees/large/tam.jpg",
 "/photos/trees/large/thimble.jpg",
-"/photos/trees/large/tremasp.jpg",
 "/photos/trees/large/twibhon.jpg",
 "/photos/trees/large/twinhon.jpg",
 "/photos/trees/large/westhem.jpg",
@@ -828,6 +830,7 @@
 "/photos/trees/large/willow.jpg",
 "/photos/trees/large/wolfwil.jpg",
 "/photos/trees/small/arbutus.jpg",
+"/photos/trees/small/aspen.jpg",
 "/photos/trees/small/balfir.jpg",
 "/photos/trees/small/balpop.jpg",
 "/photos/trees/small/bear.jpg",
@@ -864,7 +867,6 @@
 "/photos/trees/small/spruce.jpg",
 "/photos/trees/small/tam.jpg",
 "/photos/trees/small/thimble.jpg",
-"/photos/trees/small/tremasp.jpg",
 "/photos/trees/small/twibhon.jpg",
 "/photos/trees/small/twinhon.jpg",
 "/photos/trees/small/westhem.jpg",
@@ -903,6 +905,7 @@
 "/plants/philflea/",
 "/plants/pincac/",
 "/plants/plants.json",
+"/plants/poisivy/",
 "/plants/pracone/",
 "/plants/pracrocus/",
 "/plants/praonion/",
@@ -930,6 +933,7 @@
 "/service-worker.js",
 "/trees/",
 "/trees/arbutus/",
+"/trees/aspen/",
 "/trees/balfir/",
 "/trees/balpop/",
 "/trees/bear/",
@@ -966,7 +970,6 @@
 "/trees/tam/",
 "/trees/thimble/",
 "/trees/trees.json",
-"/trees/tremasp/",
 "/trees/twibhon/",
 "/trees/twinhon/",
 "/trees/westhem/",
