move labtea to plants

--- a/_includes/files.mustache
+++ b/_includes/files.mustache
@@ -701,6 +701,7 @@
 "/photos/plants/large/goldrod.jpg",
 "/photos/plants/large/horse.jpg",
 "/photos/plants/large/kelp.jpg",
+"/photos/plants/large/labtea.jpg",
 "/photos/plants/large/lupin.jpg",
 "/photos/plants/large/marshmar.jpg",
 "/photos/plants/large/nodonion.jpg",
@@ -753,6 +754,7 @@
 "/photos/plants/small/goldrod.jpg",
 "/photos/plants/small/horse.jpg",
 "/photos/plants/small/kelp.jpg",
+"/photos/plants/small/labtea.jpg",
 "/photos/plants/small/lupin.jpg",
 "/photos/plants/small/marshmar.jpg",
 "/photos/plants/small/nodonion.jpg",
@@ -804,7 +806,6 @@
 "/photos/trees/large/hicran.jpg",
 "/photos/trees/large/huck.jpg",
 "/photos/trees/large/jack.jpg",
-"/photos/trees/large/labtea.jpg",
 "/photos/trees/large/linden.jpg",
 "/photos/trees/large/lodge.jpg",
 "/photos/trees/large/manmaple.jpg",
@@ -850,7 +851,6 @@
 "/photos/trees/small/hicran.jpg",
 "/photos/trees/small/huck.jpg",
 "/photos/trees/small/jack.jpg",
-"/photos/trees/small/labtea.jpg",
 "/photos/trees/small/linden.jpg",
 "/photos/trees/small/lodge.jpg",
 "/photos/trees/small/manmaple.jpg",
@@ -898,6 +898,7 @@
 "/plants/goldrod/",
 "/plants/horse/",
 "/plants/kelp/",
+"/plants/labtea/",
 "/plants/lupin/",
 "/plants/marshmar/",
 "/plants/nodonion/",
@@ -952,7 +953,6 @@
 "/trees/hicran/",
 "/trees/huck/",
 "/trees/jack/",
-"/trees/labtea/",
 "/trees/linden/",
 "/trees/lodge/",
 "/trees/manmaple/",
