--- a/_includes/help.html
+++ b/_includes/help.html
@@ -28,24 +28,22 @@ built: function () {
         </h1>
     </div>
 
-    <div class="single">
-        <div style="margin: 0 auto;">
-            {{{ content }}}
-            <hr style="margin-top: 1em; margin-bottom: 1em;" />
-            <p>Copyright &copy; 2016-{{year}} Andrew &amp; Penny McKinlay - 
-                <a href="https://www.ecofriendlysask.ca/">EcoFriendly Sask</a>
-            </p>
+    <div class="help">
+        {{{ content }}}
+        <hr style="margin: 1em 0;" />
+        <p>Copyright &copy; 2016-{{year}} Andrew &amp; Penny McKinlay - 
+            <a href="https://www.ecofriendlysask.ca/">EcoFriendly Sask</a>
+        </p>
 
-            <p>Contact <a href="mailto:naturecompanion@mail.com?Subject=NatureCompanion">naturecompanion@mail.com</a></p>
+        <p>Contact <a href="mailto:naturecompanion@mail.com?Subject=NatureCompanion">naturecompanion@mail.com</a></p>
 
-            <p>Licensed under a 
-                <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">
-                    Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.</p>
+        <p>Licensed under a 
+            <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">
+                Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.</p>
 
-            <p>Ownership of photographs as per attribution.</p>
-            
-            <p>{{built}}</p>
-        </div>
+        <p>Ownership of photographs as per attribution.</p>
+        
+        <p>{{built}}</p>
     </div>
 </body>
 
