--- a/_includes/files.mustache
+++ b/_includes/files.mustache
@@ -52,6 +52,7 @@
 "/animals/slug/",
 "/animals/snail/",
 "/animals/snowhare/",
+"/animals/squirrel/",
 "/animals/starfish/",
 "/animals/strskunk/",
 "/animals/swifox/",
@@ -310,6 +311,7 @@
 "/photos/animals/large/slug.jpg",
 "/photos/animals/large/snail.jpg",
 "/photos/animals/large/snowhare.jpg",
+"/photos/animals/large/squirrel.jpg",
 "/photos/animals/large/starfish.jpg",
 "/photos/animals/large/strskunk.jpg",
 "/photos/animals/large/swifox.jpg",
@@ -369,6 +371,7 @@
 "/photos/animals/small/slug.jpg",
 "/photos/animals/small/snail.jpg",
 "/photos/animals/small/snowhare.jpg",
+"/photos/animals/small/squirrel.jpg",
 "/photos/animals/small/starfish.jpg",
 "/photos/animals/small/strskunk.jpg",
 "/photos/animals/small/swifox.jpg",
