incorporate recent updates

--- a/_includes/files.mustache
+++ b/_includes/files.mustache
@@ -19,14 +19,15 @@
 "/animals/cougar/",
 "/animals/coyote/",
 "/animals/crab/",
+"/animals/cray/",
 "/animals/elk/",
 "/animals/grizzly/",
 "/animals/harbseal/",
 "/animals/hoarybat/",
-"/animals/hoarymar/",
 "/animals/leastchip/",
 "/animals/litbrnbat/",
 "/animals/lynx/",
+"/animals/marmot/",
 "/animals/marten/",
 "/animals/mink/",
 "/animals/moose/",
@@ -61,7 +62,6 @@
 "/animals/whtjack/",
 "/animals/wolf/",
 "/animals/wolver/",
-"/animals/yelbelmar/",
 "/animals/yelpchip/",
 "/apple-touch-icon.png",
 "/birds/",
@@ -70,6 +70,7 @@
 "/birds/belted/",
 "/birds/birds.json",
 "/birds/blchickadee/",
+"/birds/bloyster/",
 "/birds/blturnstone/",
 "/birds/blugrouse/",
 "/birds/blujay/",
@@ -135,6 +136,7 @@
 "/birds/sprugrouse/",
 "/birds/steljay/",
 "/birds/swahawk/",
+"/birds/swallow/",
 "/birds/townwarb/",
 "/birds/treespar/",
 "/birds/trumpswan/",
@@ -278,14 +280,15 @@
 "/photos/animals/large/cougar.jpg",
 "/photos/animals/large/coyote.jpg",
 "/photos/animals/large/crab.jpg",
+"/photos/animals/large/cray.jpg",
 "/photos/animals/large/elk.jpg",
 "/photos/animals/large/grizzly.jpg",
 "/photos/animals/large/harbseal.jpg",
 "/photos/animals/large/hoarybat.jpg",
-"/photos/animals/large/hoarymar.jpg",
 "/photos/animals/large/leastchip.jpg",
 "/photos/animals/large/litbrnbat.jpg",
 "/photos/animals/large/lynx.jpg",
+"/photos/animals/large/marmot.jpg",
 "/photos/animals/large/marten.jpg",
 "/photos/animals/large/mink.jpg",
 "/photos/animals/large/moose.jpg",
@@ -320,7 +323,6 @@
 "/photos/animals/large/whtjack.jpg",
 "/photos/animals/large/wolf.jpg",
 "/photos/animals/large/wolver.jpg",
-"/photos/animals/large/yelbelmar.jpg",
 "/photos/animals/large/yelpchip.jpg",
 "/photos/animals/small/13linegs.jpg",
 "/photos/animals/small/badger.jpg",
@@ -338,14 +340,15 @@
 "/photos/animals/small/cougar.jpg",
 "/photos/animals/small/coyote.jpg",
 "/photos/animals/small/crab.jpg",
+"/photos/animals/small/cray.jpg",
 "/photos/animals/small/elk.jpg",
 "/photos/animals/small/grizzly.jpg",
 "/photos/animals/small/harbseal.jpg",
 "/photos/animals/small/hoarybat.jpg",
-"/photos/animals/small/hoarymar.jpg",
 "/photos/animals/small/leastchip.jpg",
 "/photos/animals/small/litbrnbat.jpg",
 "/photos/animals/small/lynx.jpg",
+"/photos/animals/small/marmot.jpg",
 "/photos/animals/small/marten.jpg",
 "/photos/animals/small/mink.jpg",
 "/photos/animals/small/moose.jpg",
@@ -380,12 +383,12 @@
 "/photos/animals/small/whtjack.jpg",
 "/photos/animals/small/wolf.jpg",
 "/photos/animals/small/wolver.jpg",
-"/photos/animals/small/yelbelmar.jpg",
 "/photos/animals/small/yelpchip.jpg",
 "/photos/birds/large/annas.jpg",
 "/photos/birds/large/baldeagle.jpg",
 "/photos/birds/large/belted.jpg",
 "/photos/birds/large/blchickadee.jpg",
+"/photos/birds/large/bloyster.jpg",
 "/photos/birds/large/blturnstone.jpg",
 "/photos/birds/large/blugrouse.jpg",
 "/photos/birds/large/blujay.jpg",
@@ -451,6 +454,7 @@
 "/photos/birds/large/sprugrouse.jpg",
 "/photos/birds/large/steljay.jpg",
 "/photos/birds/large/swahawk.jpg",
+"/photos/birds/large/swallow.jpg",
 "/photos/birds/large/townwarb.jpg",
 "/photos/birds/large/treespar.jpg",
 "/photos/birds/large/trumpswan.jpg",
@@ -471,6 +475,7 @@
 "/photos/birds/small/baldeagle.jpg",
 "/photos/birds/small/belted.jpg",
 "/photos/birds/small/blchickadee.jpg",
+"/photos/birds/small/bloyster.jpg",
 "/photos/birds/small/blturnstone.jpg",
 "/photos/birds/small/blugrouse.jpg",
 "/photos/birds/small/blujay.jpg",
@@ -536,6 +541,7 @@
 "/photos/birds/small/sprugrouse.jpg",
 "/photos/birds/small/steljay.jpg",
 "/photos/birds/small/swahawk.jpg",
+"/photos/birds/small/swallow.jpg",
 "/photos/birds/small/townwarb.jpg",
 "/photos/birds/small/treespar.jpg",
 "/photos/birds/small/trumpswan.jpg",
