--- a/_includes/single.html
+++ b/_includes/single.html
@@ -53,7 +53,7 @@ prev: function() {
         </h1>
     </div>
     <div class="single">
-        <div>
+        <div style="position: relative;">
             <img class="large"
                 src="/photos/{{ section }}/large/{{page.fileSlug}}.jpg" />
             <div class="attribution">
@@ -61,6 +61,17 @@ prev: function() {
                 <a href="{{ attr_link }}" target="_blank">photo</a> by {{ attr }}
                 <a href="{{ license_link }}" target="_blank">{{ license }}</a>
                 {{/attr}}
+                <div style="position: absolute; top: 10px; left: 10px;
+                    color: black; text-shadow: 0 0 6px white; 
+                    background: rgba(255, 255, 255, .3); border-radius: .5em;
+                    padding-left: .4em; padding-right: .4em;
+                    ">{{black_caption}}</div>
+                <div style="
+                    position: absolute; top: 10px; left: 10px;
+                    color: white; text-shadow: 0 0 6px black;
+                    background: rgba(0, 0, 0, .3); border-radius: .5em;
+                    padding-left: .4em; padding-right: .4em;
+                    ">{{white_caption}}</div>
             </div>
         </div>
         <div class="content">
