rename ctrabbit to cotrab, jelly to seajelly
to fix order

--- a/_includes/files.mustache
+++ b/_includes/files.mustache
@@ -16,16 +16,15 @@
 "/animals/buwrat/",
 "/animals/caribou/",
 "/animals/clam/",
+"/animals/cotrab/",
 "/animals/cougar/",
 "/animals/coyote/",
 "/animals/crab/",
 "/animals/cray/",
-"/animals/ctrabbit/",
 "/animals/elk/",
 "/animals/grizzly/",
 "/animals/harbseal/",
 "/animals/hoarybat/",
-"/animals/jelly/",
 "/animals/leastchip/",
 "/animals/litbrnbat/",
 "/animals/lynx/",
@@ -49,6 +48,7 @@
 "/animals/rivotter/",
 "/animals/sandolr/",
 "/animals/seaanem/",
+"/animals/seajelly/",
 "/animals/sealion/",
 "/animals/seaotter/",
 "/animals/seaurch/",
@@ -281,16 +281,15 @@
 "/photos/animals/large/buwrat.jpg",
 "/photos/animals/large/caribou.jpg",
 "/photos/animals/large/clam.jpg",
+"/photos/animals/large/cotrab.jpg",
 "/photos/animals/large/cougar.jpg",
 "/photos/animals/large/coyote.jpg",
 "/photos/animals/large/crab.jpg",
 "/photos/animals/large/cray.jpg",
-"/photos/animals/large/ctrabbit.jpg",
 "/photos/animals/large/elk.jpg",
 "/photos/animals/large/grizzly.jpg",
 "/photos/animals/large/harbseal.jpg",
 "/photos/animals/large/hoarybat.jpg",
-"/photos/animals/large/jelly.jpg",
 "/photos/animals/large/leastchip.jpg",
 "/photos/animals/large/litbrnbat.jpg",
 "/photos/animals/large/lynx.jpg",
@@ -314,6 +313,7 @@
 "/photos/animals/large/rivotter.jpg",
 "/photos/animals/large/sandolr.jpg",
 "/photos/animals/large/seaanem.jpg",
+"/photos/animals/large/seajelly.jpg",
 "/photos/animals/large/sealion.jpg",
 "/photos/animals/large/seaotter.jpg",
 "/photos/animals/large/seaurch.jpg",
@@ -343,16 +343,15 @@
 "/photos/animals/small/buwrat.jpg",
 "/photos/animals/small/caribou.jpg",
 "/photos/animals/small/clam.jpg",
+"/photos/animals/small/cotrab.jpg",
 "/photos/animals/small/cougar.jpg",
 "/photos/animals/small/coyote.jpg",
 "/photos/animals/small/crab.jpg",
 "/photos/animals/small/cray.jpg",
-"/photos/animals/small/ctrabbit.jpg",
 "/photos/animals/small/elk.jpg",
 "/photos/animals/small/grizzly.jpg",
 "/photos/animals/small/harbseal.jpg",
 "/photos/animals/small/hoarybat.jpg",
-"/photos/animals/small/jelly.jpg",
 "/photos/animals/small/leastchip.jpg",
 "/photos/animals/small/litbrnbat.jpg",
 "/photos/animals/small/lynx.jpg",
@@ -376,6 +375,7 @@
 "/photos/animals/small/rivotter.jpg",
 "/photos/animals/small/sandolr.jpg",
 "/photos/animals/small/seaanem.jpg",
+"/photos/animals/small/seajelly.jpg",
 "/photos/animals/small/sealion.jpg",
 "/photos/animals/small/seaotter.jpg",
 "/photos/animals/small/seaurch.jpg",
