finish renaming starfish to sea star

--- a/_includes/files.mustache
+++ b/_includes/files.mustache
@@ -51,12 +51,12 @@
 "/animals/seajelly/",
 "/animals/sealion/",
 "/animals/seaotter/",
+"/animals/seastar/",
 "/animals/seaurch/",
 "/animals/slug/",
 "/animals/snail/",
 "/animals/snowhare/",
 "/animals/squirrel/",
-"/animals/starfish/",
 "/animals/strskunk/",
 "/animals/swifox/",
 "/animals/weasel/",
@@ -316,12 +316,12 @@
 "/photos/animals/large/seajelly.jpg",
 "/photos/animals/large/sealion.jpg",
 "/photos/animals/large/seaotter.jpg",
+"/photos/animals/large/seastar.jpg",
 "/photos/animals/large/seaurch.jpg",
 "/photos/animals/large/slug.jpg",
 "/photos/animals/large/snail.jpg",
 "/photos/animals/large/snowhare.jpg",
 "/photos/animals/large/squirrel.jpg",
-"/photos/animals/large/starfish.jpg",
 "/photos/animals/large/strskunk.jpg",
 "/photos/animals/large/swifox.jpg",
 "/photos/animals/large/weasel.jpg",
@@ -378,12 +378,12 @@
 "/photos/animals/small/seajelly.jpg",
 "/photos/animals/small/sealion.jpg",
 "/photos/animals/small/seaotter.jpg",
+"/photos/animals/small/seastar.jpg",
 "/photos/animals/small/seaurch.jpg",
 "/photos/animals/small/slug.jpg",
 "/photos/animals/small/snail.jpg",
 "/photos/animals/small/snowhare.jpg",
 "/photos/animals/small/squirrel.jpg",
-"/photos/animals/small/starfish.jpg",
 "/photos/animals/small/strskunk.jpg",
 "/photos/animals/small/swifox.jpg",
 "/photos/animals/small/weasel.jpg",
