add og:image to single.html
for thumbnail e.g. on Mastodon

--- a/_includes/single.html
+++ b/_includes/single.html
@@ -35,7 +35,8 @@ prev: function() {
 <head lang="en">
     <title>{{name}} - Nature Companion</title>
     {{> head.html }}
-</head>
+    <meta property="og:image" content="/photos/{{ section }}/large/{{page.fileSlug}}.jpg" />
+    </head>
 
 <body>
     <div class="header">
