--- a/_includes/files.mustache
+++ b/_includes/files.mustache
@@ -743,8 +743,8 @@
 "/photos/plants/large/tuftflea.jpg",
 "/photos/plants/large/westblue.jpg",
 "/photos/plants/large/westcanvio.jpg",
-"/photos/plants/large/westpasq.jpg",
 "/photos/plants/large/westskunk.jpg",
+"/photos/plants/large/whitpasq.jpg",
 "/photos/plants/large/wildberg.jpg",
 "/photos/plants/large/wildflax.jpg",
 "/photos/plants/large/wildlic.jpg",
@@ -796,8 +796,8 @@
 "/photos/plants/small/tuftflea.jpg",
 "/photos/plants/small/westblue.jpg",
 "/photos/plants/small/westcanvio.jpg",
-"/photos/plants/small/westpasq.jpg",
 "/photos/plants/small/westskunk.jpg",
+"/photos/plants/small/whitpasq.jpg",
 "/photos/plants/small/wildberg.jpg",
 "/photos/plants/small/wildflax.jpg",
 "/photos/plants/small/wildlic.jpg",
@@ -941,8 +941,8 @@
 "/plants/tuftflea/",
 "/plants/westblue/",
 "/plants/westcanvio/",
-"/plants/westpasq/",
 "/plants/westskunk/",
+"/plants/whitpasq/",
 "/plants/wildberg/",
 "/plants/wildflax/",
 "/plants/wildlic/",
