--- a/_includes/files.mustache
+++ b/_includes/files.mustache
@@ -716,6 +716,7 @@
 "/photos/plants/large/downvio.jpg",
 "/photos/plants/large/earlyvio.jpg",
 "/photos/plants/large/falsesol.jpg",
+"/photos/plants/large/fawnlily.jpg",
 "/photos/plants/large/fireweed.jpg",
 "/photos/plants/large/gaillard.jpg",
 "/photos/plants/large/goldbean.jpg",
@@ -751,7 +752,6 @@
 "/photos/plants/large/wildmint.jpg",
 "/photos/plants/large/wildstraw.jpg",
 "/photos/plants/large/woodlily.jpg",
-"/photos/plants/large/yelaval.jpg",
 "/photos/plants/large/yellslip.jpg",
 "/photos/plants/small/aster.jpg",
 "/photos/plants/small/beargras.jpg",
@@ -769,6 +769,7 @@
 "/photos/plants/small/downvio.jpg",
 "/photos/plants/small/earlyvio.jpg",
 "/photos/plants/small/falsesol.jpg",
+"/photos/plants/small/fawnlily.jpg",
 "/photos/plants/small/fireweed.jpg",
 "/photos/plants/small/gaillard.jpg",
 "/photos/plants/small/goldbean.jpg",
@@ -804,7 +805,6 @@
 "/photos/plants/small/wildmint.jpg",
 "/photos/plants/small/wildstraw.jpg",
 "/photos/plants/small/woodlily.jpg",
-"/photos/plants/small/yelaval.jpg",
 "/photos/plants/small/yellslip.jpg",
 "/photos/trees/large/arbutus.jpg",
 "/photos/trees/large/aspen.jpg",
@@ -913,6 +913,7 @@
 "/plants/downvio/",
 "/plants/earlyvio/",
 "/plants/falsesol/",
+"/plants/fawnlily/",
 "/plants/fireweed/",
 "/plants/gaillard/",
 "/plants/goldbean/",
@@ -949,7 +950,6 @@
 "/plants/wildmint/",
 "/plants/wildstraw/",
 "/plants/woodlily/",
-"/plants/yelaval/",
 "/plants/yellslip/",
 "/search/",
 "/service-worker.js",
