add links and update search index

--- a/_includes/files.mustache
+++ b/_includes/files.mustache
@@ -224,6 +224,7 @@
 "/insects/boxelder/",
 "/insects/bumbee/",
 "/insects/cabbgwht/",
+"/insects/checker/",
 "/insects/cicada/",
 "/insects/cloudsulf/",
 "/insects/comptort/",
@@ -243,6 +244,7 @@
 "/insects/horsefly/",
 "/insects/housefly/",
 "/insects/houspid/",
+"/insects/hover/",
 "/insects/insects.json",
 "/insects/katydid/",
 "/insects/ladybug/",
@@ -897,6 +899,7 @@
 "/photos/trees/small/willow.jpg",
 "/photos/trees/small/wolfwil.jpg",
 "/plants/",
+"/plants/arrow/",
 "/plants/aster/",
 "/plants/beargras/",
 "/plants/blackesus/",
