add photos for arrow, checker, hover

--- a/_includes/files.mustache
+++ b/_includes/files.mustache
@@ -618,6 +618,7 @@
 "/photos/insects/large/boxelder.jpg",
 "/photos/insects/large/bumbee.jpg",
 "/photos/insects/large/cabbgwht.jpg",
+"/photos/insects/large/checker.jpg",
 "/photos/insects/large/cicada.jpg",
 "/photos/insects/large/cloudsulf.jpg",
 "/photos/insects/large/comptort.jpg",
@@ -637,6 +638,7 @@
 "/photos/insects/large/horsefly.jpg",
 "/photos/insects/large/housefly.jpg",
 "/photos/insects/large/houspid.jpg",
+"/photos/insects/large/hover.jpg",
 "/photos/insects/large/katydid.jpg",
 "/photos/insects/large/ladybug.jpg",
 "/photos/insects/large/leafcbee.jpg",
@@ -664,6 +666,7 @@
 "/photos/insects/small/boxelder.jpg",
 "/photos/insects/small/bumbee.jpg",
 "/photos/insects/small/cabbgwht.jpg",
+"/photos/insects/small/checker.jpg",
 "/photos/insects/small/cicada.jpg",
 "/photos/insects/small/cloudsulf.jpg",
 "/photos/insects/small/comptort.jpg",
@@ -683,6 +686,7 @@
 "/photos/insects/small/horsefly.jpg",
 "/photos/insects/small/housefly.jpg",
 "/photos/insects/small/houspid.jpg",
+"/photos/insects/small/hover.jpg",
 "/photos/insects/small/katydid.jpg",
 "/photos/insects/small/ladybug.jpg",
 "/photos/insects/small/leafcbee.jpg",
@@ -702,6 +706,7 @@
 "/photos/insects/small/watboat.jpg",
 "/photos/insects/small/watstrid.jpg",
 "/photos/insects/small/wolfspid.jpg",
+"/photos/plants/large/arrow.jpg",
 "/photos/plants/large/aster.jpg",
 "/photos/plants/large/beargras.jpg",
 "/photos/plants/large/blackesus.jpg",
@@ -755,6 +760,7 @@
 "/photos/plants/large/wildstraw.jpg",
 "/photos/plants/large/woodlily.jpg",
 "/photos/plants/large/yellslip.jpg",
+"/photos/plants/small/arrow.jpg",
 "/photos/plants/small/aster.jpg",
 "/photos/plants/small/beargras.jpg",
 "/photos/plants/small/blackesus.jpg",
