finish adding bufflehead

--- a/_includes/files.mustache
+++ b/_includes/files.mustache
@@ -76,6 +76,7 @@
 "/birds/blturnstone/",
 "/birds/blugrouse/",
 "/birds/blujay/",
+"/birds/buffle/",
 "/birds/burrowl/",
 "/birds/calgull/",
 "/birds/cangoose/",
@@ -402,6 +403,7 @@
 "/photos/birds/large/blturnstone.jpg",
 "/photos/birds/large/blugrouse.jpg",
 "/photos/birds/large/blujay.jpg",
+"/photos/birds/large/buffle.jpg",
 "/photos/birds/large/burrowl.jpg",
 "/photos/birds/large/calgull.jpg",
 "/photos/birds/large/cangoose.jpg",
@@ -489,6 +491,7 @@
 "/photos/birds/small/blturnstone.jpg",
 "/photos/birds/small/blugrouse.jpg",
 "/photos/birds/small/blujay.jpg",
+"/photos/birds/small/buffle.jpg",
 "/photos/birds/small/burrowl.jpg",
 "/photos/birds/small/calgull.jpg",
 "/photos/birds/small/cangoose.jpg",
